--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,7 +1,7 @@
 name: Publish package to GitHub Packages
 on:
   push:
-    branches: main
+    branches: [ main ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -10,7 +10,22 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+          settings-path: ".m2/"
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run:  mvn $MAVEN_CLI_OPTS clean deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+      - name: Copying target jar
+        run: |
+          mkdir myTarget
+          cp target/*.jar myTarget
+      - name: Uploading jar
+        uses: actions/upload-artifact@v2
+        with:
+          name: myPackage
+          path: myTarget
